plugins {
    id "java"
    id "com.github.johnrengelman.shadow" version "7.0.0"
}

group 'nl.elec332.planetside2'
version '1.0-SNAPSHOT'

sourceCompatibility = targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.google.code.gson:gson:2.8.6"
    implementation "com.neovisionaries:nv-websocket-client:2.14"
}

shadowJar {
    dependencies {
        include(dependency("com.neovisionaries:nv-websocket-client"))
    }
    relocate "com.neovisionaries", "rl.ps2.socket"
    minimize()
    getExcludes().remove("module-info.class")
}

compileJava {
    options.compilerArgs += ['--add-reads', 'nl.elec332.planetside2api=ALL-UNNAMED']
}

tasks.jar.enabled(false)
tasks.jar.dependsOn(shadowJar)
tasks.shadowJar.archiveClassifier = ""
